fix float wrapping

--- a/ballhead/static/style.css
+++ b/ballhead/static/style.css
@@ -10,7 +10,7 @@ h1              { border-bottom: 2px solid #aaa; }
 h2              { font-size: 1.2em; }
 h3              { font-size: 1em; }
 hr              { border: 0; height: 2px; background: #aaa; margin: 0.5em 0; }
-#container      { background: transparent; min-height: 870px; }
+#container      { background: transparent; min-width: 870px; }
 .left           { width: 250px; float: left; margin: 0 auto; }
 .inner          { width: 620px; float: left; margin: 0 auto; }
 .table          { width: 100%; border: 0; 
